# KAF-2020-JayAndI

./: .gitignore  CMakeLists.txt  docker-compose.yaml
android_app/: Dockerfile
android_app/kaf2020android/: settings.gradle
android_app/kaf2020android/app/: build.gradle
android_app/kaf2020android/app/src/main/: AndroidManifest.xml
android_app/kaf2020android/app/src/main/res/layout/: authenticate.xml  home.xml
android_app/kaf2020android/app/src/main/res/values/: strings.xml
android_app/kaf2020android/client_app/: build.gradle
android_app/kaf2020android/client_app/debug/: app-debug.apk  output-metadata.json
android_app/kaf2020android/client_app/release/: app-release.apk  output-metadata.json
android_app/kaf2020android/client_app/src/main/: AndroidManifest.xml
android_app/kaf2020android/client_app/src/main/res/layout/: alert.xml
android_app/kaf2020android/gradle/wrapper/: gradle-wrapper.properties
android_app/kaf2020android/keystore/: keystore.jks
android_app/libbmp/: CMakeLists.txt  README.md
android_app/libbmp/include/: bmp_parse.h  compression.h
android_app/libbmp/src/: bmp_parse.c  bmp_parse.cpp  compression.c  compression.cpp
android_app_client/: Dockerfile
android_app_client/docker/: entrypoint.sh
android_app_client/kaf2020android/: local.properties  settings.gradle
android_app_client/kaf2020android/app/debug/: output-metadata.json
android_app_client/kaf2020android/app/src/main/res/layout/: home.xml
android_app_client/kaf2020android/bot_jni/: build.gradle
android_app_client/kaf2020android/bot_jni/release/: output-metadata.json
android_app_client/kaf2020android/bot_jni/src/main/: AndroidManifest.xml
android_app_client/kaf2020android/bot_jni/src/main/res/values/: strings.xml
android_app_client/libbmp/: CMakeLists.txt  LICENSE
android_app_client/libbmp/src/: bmp_parse.cpp
include/: bmp_parse.h
server/: CMakeLists.txt  Dockerfile
server/include/: common.h  page.h  page_manager.h  user.h  user_manager.h
server/res/pages/: login.html
server/res/users/: users.txt
server/src/: common.cpp  main.cpp  page.cpp  page_manager.cpp  user.cpp  user_manager.cpp
src/: bmp_parse.c
(+19 files in other folders)
